<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/dialog_card_type"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_title"
        android:layout_centerInParent="true"
        android:autoLink="phone|web"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/dialog_card_message"
        android:textSize="12sp" />

    <Button
        android:id="@+id/dialog_mastercard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_content"
        android:layout_marginTop="10dp"
        android:background="@color/profile_information"
        android:padding="10dp"
        android:text="@string/dialog_card_mastercard"
        android:textColor="@color/profile_text" />

    <Button
        android:id="@+id/dialog_visa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_mastercard"
        android:layout_marginTop="10dp"
        android:background="@color/profile_information"
        android:padding="10dp"
        android:text="@string/dialog_card_visa"
        android:textColor="@color/profile_text" />

    <Button
        android:id="@+id/dialog_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_visa"
        android:layout_marginTop="10dp"
        android:background="@color/profile_information"
        android:padding="10dp"
        android:text="@string/dialog_card_discover"
        android:textColor="@color/profile_text" />

    <Button
        android:id="@+id/dialog_american_express"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_discover"
        android:layout_marginTop="10dp"
        android:background="@color/profile_information"
        android:padding="10dp"
        android:text="@string/dialog_card_american_express"
        android:textColor="@color/profile_text" />

    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_american_express"
        android:layout_marginTop="10dp"
        android:background="@color/orange_light"
        android:padding="10dp"
        android:text="@android:string/cancel"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</RelativeLayout>