<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/cd_login_icon"
            android:src="@drawable/ic_logo" />

        <RelativeLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_logo"
            android:layout_margin="10sp"
            android:background="@drawable/rounded_corners"
            android:padding="10sp">

            <TextView
                android:id="@+id/login_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_register_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login_register_label"
                android:textColor="@color/cart_checkout_button" />

            <RelativeLayout
                android:id="@+id/login_username_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_register_label"
                android:layout_marginTop="10sp"
                android:padding="10sp">

                <IconTextView
                    android:id="@+id/login_username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="{fa-user}"
                    android:textColor="@color/cart_checkout_button" />

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/login_username_label"
                    android:hint="@string/login_hint_username"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/login_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_username_container"
                android:padding="10dp">

                <IconTextView
                    android:id="@+id/login_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="{fa-key}" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/login_password_label"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </RelativeLayout>

            <CheckBox
                android:id="@+id/login_remember_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_container"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:checked="true"
                android:hint="@string/login_hint_remember_password" />

            <Button
                android:id="@+id/login_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_remember_password"
                android:background="@drawable/rounded_corners_red_hard"
                android:text="@string/login_sign_in"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/login_container"
            android:layout_marginLeft="40sp"
            android:text="@string/login_social_login"
            android:textColor="@android:color/white" />

        <IconTextView
            android:id="@+id/login_facebook"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_below="@id/login_social"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:background="@color/facebook"
            android:gravity="center_vertical"
            android:paddingLeft="10sp"
            android:text="@string/login_facebook"
            android:textColor="@android:color/white" />

        <IconTextView
            android:id="@+id/login_twitter"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_below="@id/login_facebook"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:background="@color/twitter"
            android:gravity="center_vertical"
            android:paddingLeft="10sp"
            android:text="@string/login_twitter"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/login_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_twitter"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:text="@string/login_skip"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>